<resources>
    <string name="app_name">Plus Jamais A Découvert</string>
    <string name="Continuer">Continuer</string>
    <string name="Bienvenue">Bienvenue sur votre application Plus Jamais A Découvert !</string>
    <string name="Quitter">Quitter</string>
    <string name="Retour">Retour</string>
    <string name="Controler">Controler mon budget</string>
    <string name="Historique">Historique</string>
    <string name="Ajouter">Ajouter un achat</string>
    <string name="Description">Description : </string>
    <string name="AjoutDescription">Ajouter une description</string>
    <string name="Prix">Prix : </string>
    <string name="AjoutPrix">Ajouter un prix </string>
    <string name="Quantité">Quantité : </string>
    <string name="AjoutQuantité">Ajouter une quantité</string>
    <string name="Domaine">Domaine : </string>
    <string name="AjoutDomaine">Ajouter un domaine</string>
    <string name="Total">Total : </string>
    <string name="Solde">Solde : </string>
    <string name="Save">Sauvegarder</string>
    <string name="Modif">Modifier</string>
    <string name="Nom">Nom : </string>
    <string name="Prénom">Prénom : </string>
    <string name="Budget">Votre budget mensuel est de : </string>
    <string name="euro">Euros</string>
    <string name="AjoutNom">Ajouter votre nom : </string>
    <string name="AjoutPrenom">Ajouter votre Prénom : </string>
    <string name="AjouterBudget">Ajouter votre Budget : </string>
</resources>
