<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AjouterUnAchat">

        <Button
            android:id="@+id/retour_button"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:text="@string/Retour" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="220dp"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AjoutDescription"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Prix"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AjoutPrix"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quantité"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AjoutQuantité"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Domaine"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AjoutDomaine"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/Total"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:text="@string/Solde"
            android:textSize="30sp"/>


    </LinearLayout>

</ScrollView>