<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".UserPage">


        <Button
            android:id="@+id/retour_button"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:text="@string/Retour" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"/>

        <Button
            android:id="@+id/controler_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:text="@string/Controler"/>

        <Button
            android:id="@+id/ajouterachat_button"
            android:layout_width="200dp"
            android:layout_margin="10dp"
            android:layout_height="45dp"
            android:text="@string/Ajouter" />

        <Button
            android:id="@+id/historique_button"
            android:layout_margin="10dp"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/Historique" />

    </LinearLayout>
